--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,9 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-build/contracts
-build
+# build/Release
+# build/contracts
+# build
 
 # Dependency directories
 node_modules/
